k8s/apps/kdebug/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdebug
  labels:
    app: kdebug
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kdebug
  template:
    metadata:
      labels:
        app: kdebug
    spec:
      containers:
      - name: kdebug
        image: ghcr.io/jory-callan/kdebug:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
