k8s/apps/kdebug/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdebug
  labels:
    app: kdebug
spec:
  selector:
    app: kdebug
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
